[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/rhythm_hero/background/radio lines.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/heartbit2x.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/Silver.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://src/rhythm_hero/scripts/main_menu.gd" type="Script" id=4]
[ext_resource path="res://Assets/rhythm_hero/music/background_song.ogg" type="AudioStream" id=5]
[ext_resource path="res://src/rhythm_hero/scenes/conductor.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/HeartbitXX2Px.ttf"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.846, 3.08635 )

[node name="RhythmHeroMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -123.0
margin_bottom = 122.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 640.0
margin_bottom = 245.0
color = Color( 0.61, 0.5246, 0.598613, 1 )

[node name="CustomButton1" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstLevenButton" type="Area2D" parent="CustomButton1"]
position = Vector2( -38.3986, 122.748 )
rotation = -0.186881
scale = Vector2( 2.48166, 1.60904 )

[node name="Polygon2D" type="Polygon2D" parent="CustomButton1/FirstLevenButton"]
color = Color( 0.964706, 0.0627451, 0.403922, 1 )
offset = Vector2( -127.608, -80.8578 )
polygon = PoolVector2Array( 376.729, 81.7784, 127.546, 120.477, 130.378, 145.962, 414.484, 128.972 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CustomButton1/FirstLevenButton"]
polygon = PoolVector2Array( 9.39819, 38.4895, 7.11469, 64.2111, 271.829, 48.2921, 273.006, 38.6958, 181.676, 12.0609 )

[node name="Button" type="Label" parent="CustomButton1"]
margin_left = 120.881
margin_top = 136.546
margin_right = 268.881
margin_bottom = 194.546
rect_rotation = -15.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomButton2" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 245.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondLevelButton" type="Area2D" parent="CustomButton2"]

[node name="Polygon2D2" type="Polygon2D" parent="CustomButton2/SecondLevelButton"]
position = Vector2( -44.0848, 311.461 )
rotation = -0.311565
scale = Vector2( 8.98545, 2.1051 )
color = Color( 0.439216, 0.403922, 0.811765, 1 )
offset = Vector2( -98.4007, -71.8108 )
polygon = PoolVector2Array( 103.89, 74.739, 98.7338, 116.793, 177.482, 123.006, 179.839, 100.239 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CustomButton2/SecondLevelButton"]
visible = false
rotation = 0.000248637
polygon = PoolVector2Array( 641.449, 152.113, 642.056, 202.059, 319.805, 300.844, 14.1789, 300.325 )

[node name="Button2" type="Label" parent="CustomButton2"]
margin_left = 387.263
margin_top = 212.655
margin_right = 535.263
margin_bottom = 270.655
rect_rotation = -15.0
custom_fonts/font = ExtResource( 2 )
text = "Nivel 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBlack" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 60.0
color = Color( 0.0431373, 0, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundBlack2" type="ColorRect" parent="."]
margin_top = 301.0
margin_right = 640.0
margin_bottom = 546.0
color = Color( 0.0431373, 0, 0.0666667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RadioLines" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.05945
margin_top = -52.9623
margin_right = 1.05945
margin_bottom = -34.9623
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vol" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="Vol"]
margin_left = -50.6663
margin_top = 22.946
margin_right = 126.334
margin_bottom = 38.946
max_value = 1.0
step = 0.05
value = 1.0
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolLabel" type="Label" parent="Vol"]
margin_left = -150.0
margin_top = 12.7887
margin_right = -100.0
margin_bottom = 41.7887
custom_fonts/font = SubResource( 2 )
text = "Volumen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -37.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="InfoContainer"]
margin_left = 166.0
margin_top = 4.0
margin_right = 473.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
text = "Usa las teclas derecha e izquierda para atacar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeLabelTimer" type="Timer" parent="."]

[node name="Conductor" parent="." instance=ExtResource( 6 )]
stream = ExtResource( 5 )
autoplay = true

[node name="Mouse" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource( 4 )
[connection signal="area_entered" from="CustomButton1/FirstLevenButton" to="." method="_on_FirstLevenButton_area_entered"]
[connection signal="area_exited" from="CustomButton1/FirstLevenButton" to="." method="_on_FirstLevenButton_area_exited"]
[connection signal="area_entered" from="CustomButton2/SecondLevelButton" to="." method="_on_SecondLevelButton_area_entered"]
[connection signal="area_exited" from="CustomButton2/SecondLevelButton" to="." method="_on_SecondLevelButton_area_exited"]
[connection signal="value_changed" from="Vol/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="beat" from="Conductor" to="." method="_on_Conductor_beat"]
[connection signal="measure" from="Conductor" to="." method="_on_Conductor_measure"]
